home 섹션 기본 골격

--- a/index.html
+++ b/index.html
@@ -35,6 +35,45 @@
         <ion-icon name="menu-outline" class="toggle_icon"></ion-icon>
       </div>
     </header>
+    <main>
+      <section class="hero section" id="hero">
+        <div class="hero_container container grid">
+          <div class="hero_content">
+            <h4>hi there,</h4>
+            <h1>
+              I'm
+              <span
+                class="typed"
+                data-typed-items="Designer, Developer, Freelancer"
+              ></span>
+            </h1>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur
+              ullam possimus ex voluptatibus distinctio sit facere saepe quaerat
+              voluptates excepturi nulla eos corporis dignissimos porro
+              repudiandae eum, ipsa beatae delectus.
+            </p>
+            <div class="here_social">
+              <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+              <a href="#"><ion-icon name="logo-github"></ion-icon></a>
+            </div>
+            <a href="#contact" class="btn">
+              Read More
+              <ion-icon name="chevron-forward-outline"></ion-icon>
+            </a>
+          </div>
+          <div class="hero_img">
+            <img
+              src="https://img.freepik.com/premium-photo/natural-beauty-podium-backdrop-with-spring-rose-flower-field-scene_6436-1168.jpg?size=626&ext=jpg&ga=GA1.2.493288223.1684236362"
+              class="img_fluid"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
