resume 섹션 기본 골격

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -13,10 +17,7 @@
         <a href="#" class="logo">LJY</a>
         <ul class="menu">
           <li class="menu_item">
-            <a href="#Home" class="menu_link active-link">Home</a>
-          </li>
-          <li class="menu_item">
-            <a href="#About" class="menu_link">About</a>
+            <a href="#hero" class="menu_link active-link">Home</a>
           </li>
           <li class="menu_item">
             <a href="#Resume" class="menu_link">Resume</a>
@@ -71,6 +72,178 @@
           </div>
         </div>
       </section>
+      <section class="resume section" id="resume">
+        <h2 class="section_title">resume</h2>
+        <div class="resume_container container grid">
+          <div class="resume_tabs">
+            <ul>
+              <li>
+                <a href="#page-1" class="current">Education</a>
+              </li>
+              <li>
+                <a href="#page-2">Experience</a>
+              </li>
+              <li>
+                <a href="#page-3">Skills</a>
+              </li>
+            </ul>
+          </div>
+          <div class="resume_content">
+            <div id="page-1" class="page one">
+              <div class="page_heading">Education</div>
+              <div class="resume_wrap">
+                <div class="resume_wrap-icon">
+                  <i class="fa-solid fa-graduation-cap"></i>
+                </div>
+                <div class="resume_wrap-content">
+                  <span class="date">2014-2015</span>
+                  <h4>Bachelor in Computer Science</h4>
+                  <span class="position">Mansoura University</span>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Unde consectetur iste, ullam vero optio, doloribus quia quo
+                    tenetur placeat harum voluptates quaerat ut quis!
+                    Exercitationem culpa laudantium vel sed perferendis?
+                  </p>
+                </div>
+              </div>
+              <div class="resume_wrap">
+                <div class="resume_wrap-icon">
+                  <i class="fa-solid fa-graduation-cap"></i>
+                </div>
+                <div class="resume_wrap_content">
+                  <span class="date">2015-2016</span>
+                  <h4>Diploma in Computer</h4>
+                  <span class="position">Mansoura University</span>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Unde consectetur iste, ullam vero optio, doloribus quia quo
+                    tenetur placeat harum voluptates quaerat ut quis!
+                    Exercitationem culpa laudantium vel sed perferendis?
+                  </p>
+                </div>
+              </div>
+              <div class="resume_wrap">
+                <div class="resume_wrap-icon">
+                  <i class="fa-solid fa-graduation-cap"></i>
+                </div>
+                <div class="resume_wrap_content">
+                  <span class="date">2016-2017</span>
+                  <h4>Art & Creative Director</h4>
+                  <span class="position">Mansoura University</span>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Unde consectetur iste, ullam vero optio, doloribus quia quo
+                    tenetur placeat harum voluptates quaerat ut quis!
+                    Exercitationem culpa laudantium vel sed perferendis?
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div id="page-2" class="page two">
+              <div class="page_heading">Experience</div>
+              <div class="resume_wrap">
+                <div class="resume_wrap-icon">
+                  <i class="fa-solid fa-graduation-cap"></i>
+                </div>
+                <div class="resume_wrap-content">
+                  <span class="date">2014-2015</span>
+                  <h4>Software Developer</h4>
+                  <span class="position">Mansoura University</span>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Unde consectetur iste, ullam vero optio, doloribus quia quo
+                    tenetur placeat harum voluptates quaerat ut quis!
+                    Exercitationem culpa laudantium vel sed perferendis?
+                  </p>
+                </div>
+              </div>
+              <div class="resume_wrap">
+                <div class="resume_wrap-icon">
+                  <i class="fa-solid fa-graduation-cap"></i>
+                </div>
+                <div class="resume_wrap_content">
+                  <span class="date">2015-2016</span>
+                  <h4>Web Marketing</h4>
+                  <span class="position">Mansoura University</span>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Unde consectetur iste, ullam vero optio, doloribus quia quo
+                    tenetur placeat harum voluptates quaerat ut quis!
+                    Exercitationem culpa laudantium vel sed perferendis?
+                  </p>
+                </div>
+              </div>
+              <div class="resume_wrap">
+                <div class="resume_wrap-icon">
+                  <i class="fa-solid fa-graduation-cap"></i>
+                </div>
+                <div class="resume_wrap_content">
+                  <span class="date">2016-2017</span>
+                  <h4>UI/UX Designer</h4>
+                  <span class="position">Mansoura University</span>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Unde consectetur iste, ullam vero optio, doloribus quia quo
+                    tenetur placeat harum voluptates quaerat ut quis!
+                    Exercitationem culpa laudantium vel sed perferendis?
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div id="page-3" class="page three">
+              <div class="page_heading">Skills</div>
+              <div class="progressBoxs grid">
+                <div class="progressBox">
+                  <div class="progress_name">
+                    <span>HTML</span>
+                    <span>50%</span>
+                  </div>
+                  <div class="progress">
+                    <div class="progress_bar" style="width: 50%"></div>
+                  </div>
+                </div>
+                <div class="progressBox">
+                  <div class="progress_name">
+                    <span>CSS</span>
+                    <span>50%</span>
+                  </div>
+                  <div class="progress">
+                    <div class="progress_bar" style="width: 50%"></div>
+                  </div>
+                </div>
+                <div class="progressBox">
+                  <div class="progress_name">
+                    <span>JavaScript</span>
+                    <span>50%</span>
+                  </div>
+                  <div class="progress">
+                    <div class="progress_bar" style="width: 50%"></div>
+                  </div>
+                </div>
+                <div class="progressBox">
+                  <div class="progress_name">
+                    <span>jQuery</span>
+                    <span>50%</span>
+                  </div>
+                  <div class="progress">
+                    <div class="progress_bar" style="width: 50%"></div>
+                  </div>
+                </div>
+                <div class="progressBox">
+                  <div class="progress_name">
+                    <span>React</span>
+                    <span>50%</span>
+                  </div>
+                  <div class="progress">
+                    <div class="progress_bar" style="width: 50%"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
@@ -81,6 +254,10 @@
     <script
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/e3d83117d8.js"
+      crossorigin="anonymous"
     ></script>
     <script src="main.js"></script>
   </body>
