--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+
     <title>Document</title>
   </head>
   <body>
@@ -20,16 +21,16 @@
             <a href="#hero" class="menu_link active-link">Home</a>
           </li>
           <li class="menu_item">
-            <a href="#Resume" class="menu_link">Resume</a>
+            <a href="#resume" class="menu_link">Resume</a>
           </li>
           <li class="menu_item">
-            <a href="#Portfolio" class="menu_link">Portfolio</a>
+            <a href="#portfolio" class="menu_link">Portfolio</a>
           </li>
           <li class="menu_item">
-            <a href="#Services" class="menu_link">Services</a>
+            <a href="#services" class="menu_link">Services</a>
           </li>
           <li class="menu_item">
-            <a href="#Contact" class="menu_link">Contact</a>
+            <a href="#contact" class="menu_link">Contact</a>
           </li>
           <ion-icon name="close-outline" class="close_icon"></ion-icon>
         </ul>
