--- a/index.html
+++ b/index.html
@@ -245,8 +245,123 @@
           </div>
         </div>
       </section>
+      <section class="portfolio section" id="portfolio">
+        <h2 class="section_title">Portfolio</h2>
+        <div class="portfolio_container container">
+          <ul class="portfolio_filters">
+            <li data-filter="*" class="filter-active">All</li>
+            <li data-filter=".filter-javascript">JavaScript</li>
+            <li data-filter=".filter-react">React</li>
+          </ul>
+          <div class="portfolio_wrap-container">
+            <div class="portfolio_item filter-javascript">
+              <div class="portfolio_wrap">
+                <img
+                  src="https://img.freepik.com/free-photo/pathway-in-the-middle-of-the-green-leafed-trees-with-the-sun-shining-through-the-branches_181624-4539.jpg?size=626&ext=jpg&ga=GA1.2.42311633.1684284159&semt=sph"
+                  alt=""
+                  class="img-fluid"
+                />
+                <div class="portfolio_info">
+                  <h4>javascript</h4>
+                  <p>javascript</p>
+                  <div class="portfolio_links">
+                    <a href="#"><i class="fa-solid fa-plus"></i></a>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio_item filter-react">
+              <div class="portfolio_wrap">
+                <img
+                  src="https://img.freepik.com/free-photo/aerial-view-of-green-forest_144627-45271.jpg?size=626&ext=jpg&ga=GA1.2.42311633.1684284159&semt=sph"
+                  alt=""
+                  class="img-fluid"
+                />
+                <div class="portfolio_info">
+                  <h4>react</h4>
+                  <p>react</p>
+                  <div class="portfolio_links">
+                    <a href="#"><i class="fa-solid fa-plus"></i></a>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio_item filter-react">
+              <div class="portfolio_wrap">
+                <img
+                  src="https://img.freepik.com/free-photo/cloudy-landscape-cumulus-haze-scenic_1232-3932.jpg?size=626&ext=jpg&ga=GA1.1.42311633.1684284159&semt=sph"
+                  alt=""
+                  class="img-fluid"
+                />
+                <div class="portfolio_info">
+                  <h4>react</h4>
+                  <p>react</p>
+                  <div class="portfolio_links">
+                    <a href="#"><i class="fa-solid fa-plus"></i></a>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio_item filter-javascript">
+              <div class="portfolio_wrap">
+                <img
+                  src="https://img.freepik.com/free-photo/beautiful-tree-in-the-middle-of-a-field-covered-with-grass-with-the-tree-line-in-the-background_181624-29267.jpg?size=626&ext=jpg&ga=GA1.2.42311633.1684284159&semt=sph"
+                  alt=""
+                  class="img-fluid"
+                />
+                <div class="portfolio_info">
+                  <h4>javascript</h4>
+                  <p>javascript</p>
+                  <div class="portfolio_links">
+                    <a href="#"><i class="fa-solid fa-plus"></i></a>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio_item filter-javascript">
+              <div class="portfolio_wrap">
+                <img
+                  src="https://img.freepik.com/free-photo/green-field-tree-and-blue-skygreat-as-a-backgroundweb-banner-generative-ai_1258-158251.jpg?size=626&ext=jpg&ga=GA1.1.42311633.1684284159&semt=sph"
+                  alt=""
+                  class="img-fluid"
+                />
+                <div class="portfolio_info">
+                  <h4>javascript</h4>
+                  <p>javascript</p>
+                  <div class="portfolio_links">
+                    <a href="#"><i class="fa-solid fa-plus"></i></a>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio_item filter-react">
+              <div class="portfolio_wrap">
+                <img
+                  src="https://img.freepik.com/free-photo/summer-landscape-in-mountains-and-the-blue-sky_661209-67.jpg?size=626&ext=jpg&ga=GA1.1.42311633.1684284159&semt=sph"
+                  alt=""
+                  class="img-fluid"
+                />
+                <div class="portfolio_info">
+                  <h4>react</h4>
+                  <p>react</p>
+                  <div class="portfolio_links">
+                    <a href="#"><i class="fa-solid fa-plus"></i></a>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script
       type="module"
