contact 섹션 기본 골격

--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
             <a href="#portfolio" class="menu_link">Portfolio</a>
           </li>
           <li class="menu_item">
-            <a href="#services" class="menu_link">Services</a>
-          </li>
-          <li class="menu_item">
             <a href="#contact" class="menu_link">Contact</a>
           </li>
           <ion-icon name="close-outline" class="close_icon"></ion-icon>
@@ -356,6 +353,29 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="contact section" id="contact">
+        <h2 class="section_title">Contact me</h2>
+        <div class="contact_container container">
+          <div class="contact_content">
+            <div class="inputs">
+              <input type="text" placeholder="이름" />
+              <input type="email" placeholder="이메일" />
+            </div>
+            <input type="password" placeholder="비밀번호" />
+            <textarea
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="메세지"
+            ></textarea>
+            <a href="#" class="btn"
+              >메세지 보내기
+              <ion-icon name="chevron-forward-outline"></ion-icon>
+            </a>
           </div>
         </div>
       </section>
