footer 섹션 기본 골격

--- a/index.html
+++ b/index.html
@@ -379,6 +379,28 @@
           </div>
         </div>
       </section>
+      <footer>
+        <div class="footer_bg">
+          <div class="footer_container container">
+            <div class="main_footer">
+              <div class="footer_social">
+                <a href="#"><i class="fa-brands fa-google"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+              </div>
+              <h3>LeeJinYoung</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam
+                esse exercitationem cumque ducimus voluptatibus nihil voluptatum
+                quo minus dignissimos vero. Unde qui vitae ut laborum libero
+                quam? Sint, expedita non.
+              </p>
+            </div>
+            <div class="footer_copy">
+              &#169; LeeJinYoung. All right reserved
+            </div>
+          </div>
+        </div>
+      </footer>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script>
