기본세팅, navbar 1차 수정

--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-
-    <title>Document</title>
+    <title>포트폴리오</title>
   </head>
   <body>
     <header id="header">
       <div class="container">
-        <a href="#" class="logo">LJY</a>
+        <a href="#" class="logo">jin young</a>
         <ul class="menu">
           <li class="menu_item">
-            <a href="#hero" class="menu_link active-link">Home</a>
+            <a href="#home" class="menu_link active-link">Home</a>
           </li>
           <li class="menu_item">
             <a href="#resume" class="menu_link">Resume</a>
@@ -35,9 +34,9 @@
       </div>
     </header>
     <main>
-      <section class="hero section" id="hero">
-        <div class="hero_container container grid">
-          <div class="hero_content">
+      <section class="home section" id="home">
+        <div class="home_container container grid">
+          <div class="home_content">
             <h4>hi there,</h4>
             <h1>
               I'm
@@ -52,7 +51,7 @@
               voluptates excepturi nulla eos corporis dignissimos porro
               repudiandae eum, ipsa beatae delectus.
             </p>
-            <div class="here_social">
+            <div class="home_social">
               <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
               <a href="#"><ion-icon name="logo-github"></ion-icon></a>
             </div>
@@ -61,7 +60,7 @@
               <ion-icon name="chevron-forward-outline"></ion-icon>
             </a>
           </div>
-          <div class="hero_img">
+          <div class="home_img">
             <img
               src="https://img.freepik.com/premium-photo/natural-beauty-podium-backdrop-with-spring-rose-flower-field-scene_6436-1168.jpg?size=626&ext=jpg&ga=GA1.2.493288223.1684236362"
               class="img_fluid"
@@ -402,9 +401,7 @@
         </div>
       </footer>
     </main>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script>
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
