home 섹션 1차 수정

--- a/index.html
+++ b/index.html
@@ -35,37 +35,12 @@
     </header>
     <main>
       <section class="home section" id="home">
-        <div class="home_container container grid">
+        <div class="home_container">
           <div class="home_content">
-            <h4>hi there,</h4>
-            <h1>
-              I'm
-              <span
-                class="typed"
-                data-typed-items="Designer, Developer, Freelancer"
-              ></span>
-            </h1>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur
-              ullam possimus ex voluptatibus distinctio sit facere saepe quaerat
-              voluptates excepturi nulla eos corporis dignissimos porro
-              repudiandae eum, ipsa beatae delectus.
-            </p>
-            <div class="home_social">
-              <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
-              <a href="#"><ion-icon name="logo-github"></ion-icon></a>
-            </div>
-            <a href="#contact" class="btn">
-              Read More
-              <ion-icon name="chevron-forward-outline"></ion-icon>
-            </a>
-          </div>
-          <div class="home_img">
-            <img
-              src="https://img.freepik.com/premium-photo/natural-beauty-podium-backdrop-with-spring-rose-flower-field-scene_6436-1168.jpg?size=626&ext=jpg&ga=GA1.2.493288223.1684236362"
-              class="img_fluid"
-              alt=""
-            />
+            <h1>안녕하세요, <span></span></h1>
+            <h1>신입 프론트엔드 개발자 <span></span></h1>
+            <h1>이진영입니다. <span></span></h1>
+            <a href="#resume" class="btn"> 더 알아보기 <span></span></a>
           </div>
         </div>
       </section>
