resume 섹션 1차 수정

--- a/index.html
+++ b/index.html
@@ -45,139 +45,81 @@
         </div>
       </section>
       <section class="resume section" id="resume">
-        <h2 class="section_title">resume</h2>
+        <h2 class="section_title">- resume -</h2>
         <div class="resume_container container grid">
           <div class="resume_tabs">
             <ul>
               <li>
-                <a href="#page-1" class="current">Education</a>
+                <a href="#page-1" class="current">TimeLine</a>
               </li>
               <li>
-                <a href="#page-2">Experience</a>
-              </li>
-              <li>
-                <a href="#page-3">Skills</a>
+                <a href="#page-2">Skills</a>
               </li>
             </ul>
           </div>
           <div class="resume_content">
             <div id="page-1" class="page one">
-              <div class="page_heading">Education</div>
+              <div class="page_heading">TimeLine</div>
               <div class="resume_wrap">
-                <div class="resume_wrap-icon">
-                  <i class="fa-solid fa-graduation-cap"></i>
-                </div>
                 <div class="resume_wrap-content">
-                  <span class="date">2014-2015</span>
-                  <h4>Bachelor in Computer Science</h4>
-                  <span class="position">Mansoura University</span>
+                  <span class="date">2013.03</span>
+                  <h4>영진전문대 입학</h4>
+                  <p>전자 정보통신학과</p>
+                </div>
+              </div>
+              <div class="resume_wrap">
+                <div class="resume_wrap-content">
+                  <span class="date">2013.10 ~ 2015.07</span>
+                  <h4>군 입대</h4>
+                  <p>육군병장 만기전역</p>
+                </div>
+              </div>
+              <div class="resume_wrap">
+                <div class="resume_wrap-content">
+                  <span class="date">2018.02</span>
+                  <h4>영진전문대 졸업</h4>
+                </div>
+              </div>
+              <div class="resume_wrap">
+                <div class="resume_wrap-content">
+                  <span class="date">2018.03 ~ 2020.09</span>
+                  <h4>리쿠르트 R&D 스태핑</h4>
                   <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Unde consectetur iste, ullam vero optio, doloribus quia quo
-                    tenetur placeat harum voluptates quaerat ut quis!
-                    Exercitationem culpa laudantium vel sed perferendis?
+                    일본 IT 기업 리쿠르트 R&D 스태핑 정사원 (기술직 파견사원)
                   </p>
                 </div>
               </div>
               <div class="resume_wrap">
-                <div class="resume_wrap-icon">
-                  <i class="fa-solid fa-graduation-cap"></i>
-                </div>
-                <div class="resume_wrap_content">
-                  <span class="date">2015-2016</span>
-                  <h4>Diploma in Computer</h4>
-                  <span class="position">Mansoura University</span>
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Unde consectetur iste, ullam vero optio, doloribus quia quo
-                    tenetur placeat harum voluptates quaerat ut quis!
-                    Exercitationem culpa laudantium vel sed perferendis?
-                  </p>
-                </div>
-              </div>
-              <div class="resume_wrap">
-                <div class="resume_wrap-icon">
-                  <i class="fa-solid fa-graduation-cap"></i>
-                </div>
-                <div class="resume_wrap_content">
-                  <span class="date">2016-2017</span>
-                  <h4>Art & Creative Director</h4>
-                  <span class="position">Mansoura University</span>
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Unde consectetur iste, ullam vero optio, doloribus quia quo
-                    tenetur placeat harum voluptates quaerat ut quis!
-                    Exercitationem culpa laudantium vel sed perferendis?
-                  </p>
+                <div class="resume_wrap-content">
+                  <span class="date">2022.04 ~ </span>
+                  <h4>프론트엔드 개발 공부</h4>
                 </div>
               </div>
             </div>
             <div id="page-2" class="page two">
-              <div class="page_heading">Experience</div>
-              <div class="resume_wrap">
-                <div class="resume_wrap-icon">
-                  <i class="fa-solid fa-graduation-cap"></i>
-                </div>
-                <div class="resume_wrap-content">
-                  <span class="date">2014-2015</span>
-                  <h4>Software Developer</h4>
-                  <span class="position">Mansoura University</span>
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Unde consectetur iste, ullam vero optio, doloribus quia quo
-                    tenetur placeat harum voluptates quaerat ut quis!
-                    Exercitationem culpa laudantium vel sed perferendis?
-                  </p>
-                </div>
-              </div>
-              <div class="resume_wrap">
-                <div class="resume_wrap-icon">
-                  <i class="fa-solid fa-graduation-cap"></i>
-                </div>
-                <div class="resume_wrap_content">
-                  <span class="date">2015-2016</span>
-                  <h4>Web Marketing</h4>
-                  <span class="position">Mansoura University</span>
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Unde consectetur iste, ullam vero optio, doloribus quia quo
-                    tenetur placeat harum voluptates quaerat ut quis!
-                    Exercitationem culpa laudantium vel sed perferendis?
-                  </p>
-                </div>
-              </div>
-              <div class="resume_wrap">
-                <div class="resume_wrap-icon">
-                  <i class="fa-solid fa-graduation-cap"></i>
-                </div>
-                <div class="resume_wrap_content">
-                  <span class="date">2016-2017</span>
-                  <h4>UI/UX Designer</h4>
-                  <span class="position">Mansoura University</span>
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Unde consectetur iste, ullam vero optio, doloribus quia quo
-                    tenetur placeat harum voluptates quaerat ut quis!
-                    Exercitationem culpa laudantium vel sed perferendis?
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div id="page-3" class="page three">
               <div class="page_heading">Skills</div>
               <div class="progressBoxs grid">
                 <div class="progressBox">
                   <div class="progress_name">
                     <span>HTML</span>
-                    <span>50%</span>
+                    <span>55%</span>
                   </div>
                   <div class="progress">
-                    <div class="progress_bar" style="width: 50%"></div>
+                    <div class="progress_bar" style="width: 55%"></div>
                   </div>
                 </div>
                 <div class="progressBox">
                   <div class="progress_name">
                     <span>CSS</span>
+                    <span>55%</span>
+                  </div>
+                  <div class="progress">
+                    <div class="progress_bar" style="width: 55%"></div>
+                  </div>
+                </div>
+                <div class="progressBox">
+                  <div class="progress_name">
+                    <span>JAVASCRIPT</span>
                     <span>50%</span>
                   </div>
                   <div class="progress">
@@ -186,7 +128,34 @@
                 </div>
                 <div class="progressBox">
                   <div class="progress_name">
-                    <span>JavaScript</span>
+                    <span>PHP</span>
+                    <span>20%</span>
+                  </div>
+                  <div class="progress">
+                    <div class="progress_bar" style="width: 20%"></div>
+                  </div>
+                </div>
+                <div class="progressBox">
+                  <div class="progress_name">
+                    <span>JQUERY</span>
+                    <span>30%</span>
+                  </div>
+                  <div class="progress">
+                    <div class="progress_bar" style="width: 30%"></div>
+                  </div>
+                </div>
+                <div class="progressBox">
+                  <div class="progress_name">
+                    <span>BOOTSTRAP</span>
+                    <span>30%</span>
+                  </div>
+                  <div class="progress">
+                    <div class="progress_bar" style="width: 30%"></div>
+                  </div>
+                </div>
+                <div class="progressBox">
+                  <div class="progress_name">
+                    <span>REACT</span>
                     <span>50%</span>
                   </div>
                   <div class="progress">
@@ -195,20 +164,20 @@
                 </div>
                 <div class="progressBox">
                   <div class="progress_name">
-                    <span>jQuery</span>
-                    <span>50%</span>
+                    <span>GIT</span>
+                    <span>40%</span>
                   </div>
                   <div class="progress">
-                    <div class="progress_bar" style="width: 50%"></div>
+                    <div class="progress_bar" style="width: 40%"></div>
                   </div>
                 </div>
                 <div class="progressBox">
                   <div class="progress_name">
-                    <span>React</span>
-                    <span>50%</span>
+                    <span>GITHUB</span>
+                    <span>40%</span>
                   </div>
                   <div class="progress">
-                    <div class="progress_bar" style="width: 50%"></div>
+                    <div class="progress_bar" style="width: 40%"></div>
                   </div>
                 </div>
               </div>
@@ -217,7 +186,7 @@
         </div>
       </section>
       <section class="portfolio section" id="portfolio">
-        <h2 class="section_title">Portfolio</h2>
+        <h2 class="section_title">- Portfolio -</h2>
         <div class="portfolio_container container">
           <ul class="portfolio_filters">
             <li data-filter="*" class="filter-active">All</li>
@@ -331,7 +300,7 @@
         </div>
       </section>
       <section class="contact section" id="contact">
-        <h2 class="section_title">Contact me</h2>
+        <h2 class="section_title">- Contact me -</h2>
         <div class="contact_container container">
           <div class="contact_content">
             <div class="inputs">
