--- a/index.html
+++ b/index.html
@@ -194,18 +194,31 @@
             <li data-filter=".filter-react">React</li>
           </ul>
           <div class="portfolio_wrap-container">
+            <div class="portfolio_item filter-react">
+              <div class="portfolio_wrap">
+                <img src="./imgs/일어 암기.gif" alt="" class="img-fluid" />
+                <div class="portfolio_info">
+                  <h4>일어 암기 웹사이트</h4>
+                  <p>22.07.13 ~ 22.08.13 (1인 프로젝트)</p>
+                  <div class="portfolio_links">
+                    <a href="https://github.com/LEEJINYOUN/jpt_words.git"
+                      ><i class="fa-brands fa-github"></i
+                    ></a>
+                    <a href="https://leejinyoun.github.io/jpt_words/"
+                      ><i class="fa-solid fa-link"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="portfolio_item filter-javascript">
               <div class="portfolio_wrap">
-                <img
-                  src="https://img.freepik.com/free-photo/pathway-in-the-middle-of-the-green-leafed-trees-with-the-sun-shining-through-the-branches_181624-4539.jpg?size=626&ext=jpg&ga=GA1.2.42311633.1684284159&semt=sph"
-                  alt=""
-                  class="img-fluid"
-                />
+                <img src="./imgs/포트폴리오.jpg" alt="" class="img-fluid" />
                 <div class="portfolio_info">
-                  <h4>javascript</h4>
-                  <p>javascript</p>
+                  <h4>개인 포트폴리오</h4>
+                  <p>22.12.26 ~ 22.12.31 (1인 프로젝트)</p>
                   <div class="portfolio_links">
-                    <a href="#"><i class="fa-solid fa-plus"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
                     <a href="#"><i class="fa-solid fa-link"></i></a>
                   </div>
                 </div>
@@ -213,85 +226,68 @@
             </div>
             <div class="portfolio_item filter-react">
               <div class="portfolio_wrap">
-                <img
-                  src="https://img.freepik.com/free-photo/aerial-view-of-green-forest_144627-45271.jpg?size=626&ext=jpg&ga=GA1.2.42311633.1684284159&semt=sph"
-                  alt=""
-                  class="img-fluid"
-                />
+                <img src="./imgs/영화 웹사이트.gif" alt="" class="img-fluid" />
                 <div class="portfolio_info">
-                  <h4>react</h4>
-                  <p>react</p>
+                  <h4>영화 웹사이트</h4>
+                  <p>23.02.28 ~ 23.03.13 (1인 프로젝트)</p>
                   <div class="portfolio_links">
-                    <a href="#"><i class="fa-solid fa-plus"></i></a>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                    <a href="https://github.com/LEEJINYOUN/moviebox.git"
+                      ><i class="fa-brands fa-github"></i
+                    ></a>
+                    <a href="https://leejinyoun.github.io/moviebox/"
+                      ><i class="fa-solid fa-link"></i
+                    ></a>
                   </div>
                 </div>
               </div>
             </div>
             <div class="portfolio_item filter-react">
               <div class="portfolio_wrap">
-                <img
-                  src="https://img.freepik.com/free-photo/cloudy-landscape-cumulus-haze-scenic_1232-3932.jpg?size=626&ext=jpg&ga=GA1.1.42311633.1684284159&semt=sph"
-                  alt=""
-                  class="img-fluid"
-                />
+                <img src="./imgs/채팅 앱.gif" alt="" class="img-fluid" />
                 <div class="portfolio_info">
-                  <h4>react</h4>
-                  <p>react</p>
+                  <h4>채팅 앱</h4>
+                  <p>23.01.20 ~ 23.01.27 (1인 프로젝트)</p>
                   <div class="portfolio_links">
-                    <a href="#"><i class="fa-solid fa-plus"></i></a>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                    <a href="https://github.com/LEEJINYOUN/chatting-app.git"
+                      ><i class="fa-brands fa-github"></i
+                    ></a>
+                    <a href="https://leejinyoun.github.io/chatting-app/"
+                      ><i class="fa-solid fa-link"></i
+                    ></a>
                   </div>
                 </div>
               </div>
             </div>
             <div class="portfolio_item filter-javascript">
               <div class="portfolio_wrap">
-                <img
-                  src="https://img.freepik.com/free-photo/beautiful-tree-in-the-middle-of-a-field-covered-with-grass-with-the-tree-line-in-the-background_181624-29267.jpg?size=626&ext=jpg&ga=GA1.2.42311633.1684284159&semt=sph"
-                  alt=""
-                  class="img-fluid"
-                />
+                <img src="./imgs/날씨 웹사이트.gif" alt="" class="img-fluid" />
                 <div class="portfolio_info">
-                  <h4>javascript</h4>
-                  <p>javascript</p>
+                  <h4>날씨 웹사이트</h4>
+                  <p>23.02.20 ~ 23.02.25 (1인 프로젝트)</p>
                   <div class="portfolio_links">
-                    <a href="#"><i class="fa-solid fa-plus"></i></a>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="portfolio_item filter-javascript">
-              <div class="portfolio_wrap">
-                <img
-                  src="https://img.freepik.com/free-photo/green-field-tree-and-blue-skygreat-as-a-backgroundweb-banner-generative-ai_1258-158251.jpg?size=626&ext=jpg&ga=GA1.1.42311633.1684284159&semt=sph"
-                  alt=""
-                  class="img-fluid"
-                />
-                <div class="portfolio_info">
-                  <h4>javascript</h4>
-                  <p>javascript</p>
-                  <div class="portfolio_links">
-                    <a href="#"><i class="fa-solid fa-plus"></i></a>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                    <a href="https://github.com/LEEJINYOUN/WeatherApp-js-.git"
+                      ><i class="fa-brands fa-github"></i
+                    ></a>
+                    <a href="https://leejinyoun.github.io/WeatherApp-js-/"
+                      ><i class="fa-solid fa-link"></i
+                    ></a>
                   </div>
                 </div>
               </div>
             </div>
             <div class="portfolio_item filter-react">
               <div class="portfolio_wrap">
-                <img
-                  src="https://img.freepik.com/free-photo/summer-landscape-in-mountains-and-the-blue-sky_661209-67.jpg?size=626&ext=jpg&ga=GA1.1.42311633.1684284159&semt=sph"
-                  alt=""
-                  class="img-fluid"
-                />
+                <img src="./imgs/투두리스트.gif" alt="" class="img-fluid" />
                 <div class="portfolio_info">
-                  <h4>react</h4>
-                  <p>react</p>
+                  <h4>투두리스트</h4>
+                  <p>23.01.05 ~ 23.01.06 (1인 프로젝트)</p>
                   <div class="portfolio_links">
-                    <a href="#"><i class="fa-solid fa-plus"></i></a>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                    <a href="https://github.com/LEEJINYOUN/ToDoList-jsx-.git"
+                      ><i class="fa-brands fa-github"></i
+                    ></a>
+                    <a href="https://leejinyoun.github.io/ToDoList-jsx-/"
+                      ><i class="fa-solid fa-link"></i
+                    ></a>
                   </div>
                 </div>
               </div>
