--- a/index.html
+++ b/index.html
@@ -320,19 +320,13 @@
           <div class="footer_container container">
             <div class="main_footer">
               <div class="footer_social">
-                <a href="#"><i class="fa-brands fa-google"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/LEEJINYOUN"
+                  ><i class="fab fa-github"></i
+                ></a>
               </div>
-              <h3>LeeJinYoung</h3>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam
-                esse exercitationem cumque ducimus voluptatibus nihil voluptatum
-                quo minus dignissimos vero. Unde qui vitae ut laborum libero
-                quam? Sint, expedita non.
-              </p>
-            </div>
-            <div class="footer_copy">
-              &#169; LeeJinYoung. All right reserved
+              <div class="footer_copy">
+                &#169; 2023. Lee Jin Young. All right reserved
+              </div>
             </div>
           </div>
         </div>
