전체 코드 정리

--- a/index.html
+++ b/index.html
@@ -216,10 +216,14 @@
                 <img src="./imgs/포트폴리오.jpg" alt="" class="img-fluid" />
                 <div class="portfolio_info">
                   <h4>개인 포트폴리오</h4>
-                  <p>22.12.26 ~ 22.12.31 (1인 프로젝트)</p>
+                  <p>23.05.16 ~ 23.05.19 (1인 프로젝트)</p>
                   <div class="portfolio_links">
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                    <a href="https://github.com/LEEJINYOUN/portfolio-2023-.git"
+                      ><i class="fa-brands fa-github"></i
+                    ></a>
+                    <a href="https://leejinyoun.github.io/portfolio-2023-/"
+                      ><i class="fa-solid fa-link"></i
+                    ></a>
                   </div>
                 </div>
               </div>
