--- a/index.html
+++ b/index.html
@@ -336,6 +336,9 @@
         </div>
       </footer>
     </main>
+    <button class="arrowUp">
+      <i class="fa-solid fa-arrow-up"></i>
+    </button>
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
