프로젝트 (단어장 앱) 추가, 스킬 섹션 수정

--- a/index.html
+++ b/index.html
@@ -142,38 +142,29 @@
                 </div>
                 <div class="progressBox">
                   <div class="progress_name">
-                    <span>BOOTSTRAP</span>
-                    <span>30%</span>
-                  </div>
-                  <div class="progress">
-                    <div class="progress_bar" style="width: 30%"></div>
-                  </div>
-                </div>
-                <div class="progressBox">
-                  <div class="progress_name">
                     <span>REACT</span>
-                    <span>50%</span>
+                    <span>45%</span>
                   </div>
                   <div class="progress">
-                    <div class="progress_bar" style="width: 50%"></div>
+                    <div class="progress_bar" style="width: 45%"></div>
                   </div>
                 </div>
                 <div class="progressBox">
                   <div class="progress_name">
                     <span>GIT</span>
-                    <span>40%</span>
+                    <span>35%</span>
                   </div>
                   <div class="progress">
-                    <div class="progress_bar" style="width: 40%"></div>
+                    <div class="progress_bar" style="width: 35%"></div>
                   </div>
                 </div>
                 <div class="progressBox">
                   <div class="progress_name">
                     <span>GITHUB</span>
-                    <span>40%</span>
+                    <span>35%</span>
                   </div>
                   <div class="progress">
-                    <div class="progress_bar" style="width: 40%"></div>
+                    <div class="progress_bar" style="width: 35%"></div>
                   </div>
                 </div>
               </div>
@@ -210,16 +201,14 @@
             </div>
             <div class="portfolio_item filter-react">
               <div class="portfolio_wrap">
-                <img src="./imgs/일어 암기.gif" alt="" class="img-fluid" />
+                <img src="./imgs/단어장.gif" alt="" class="img-fluid" />
                 <div class="portfolio_info">
-                  <h4>일어 암기 웹사이트</h4>
-                  <p>22.07.13 ~ 22.08.13 (1인 프로젝트)</p>
+                  <h4>단어장 앱</h4>
+                  <p>23.07.04 ~ 23.07.12 (1인 프로젝트)</p>
                   <div class="portfolio_links">
-                    <a href="https://github.com/LEEJINYOUN/jpt_words.git"
+                    <a
+                      href="https://github.com/LEEJINYOUN/WordBook_React-jsx-.git"
                       ><i class="fa-brands fa-github"></i
-                    ></a>
-                    <a href="https://leejinyoun.github.io/jpt_words/"
-                      ><i class="fa-solid fa-link"></i
                     ></a>
                   </div>
                 </div>
