스킬 추가, 프로젝트 (단어장 앱) 추가

--- a/index.html
+++ b/index.html
@@ -124,6 +124,15 @@
                 </div>
                 <div class="progressBox">
                   <div class="progress_name">
+                    <span>TYPESCRIPT</span>
+                    <span>20%</span>
+                  </div>
+                  <div class="progress">
+                    <div class="progress_bar" style="width: 20%"></div>
+                  </div>
+                </div>
+                <div class="progressBox">
+                  <div class="progress_name">
                     <span>PHP</span>
                     <span>20%</span>
                   </div>
@@ -147,6 +156,15 @@
                   </div>
                   <div class="progress">
                     <div class="progress_bar" style="width: 45%"></div>
+                  </div>
+                </div>
+                <div class="progressBox">
+                  <div class="progress_name">
+                    <span>NODE JS</span>
+                    <span>10%</span>
+                  </div>
+                  <div class="progress">
+                    <div class="progress_bar" style="width: 10%"></div>
                   </div>
                 </div>
                 <div class="progressBox">
@@ -204,10 +222,10 @@
                 <img src="./imgs/단어장.gif" alt="" class="img-fluid" />
                 <div class="portfolio_info">
                   <h4>단어장 앱</h4>
-                  <p>23.07.04 ~ 23.07.12 (1인 프로젝트)</p>
+                  <p>23.07.18 ~ 23.07.28 (1인 프로젝트)</p>
                   <div class="portfolio_links">
                     <a
-                      href="https://github.com/LEEJINYOUN/WordBook_React-jsx-.git"
+                      href="https://github.com/LEEJINYOUN/WordBook_React-tsx-.git"
                       ><i class="fa-brands fa-github"></i
                     ></a>
                   </div>
