프로젝트 (단어앱) 배포주소 추가

--- a/index.html
+++ b/index.html
@@ -228,6 +228,9 @@
                       href="https://github.com/LEEJINYOUN/WordBook_React-tsx-.git"
                       ><i class="fa-brands fa-github"></i
                     ></a>
+                    <a href="https://leejinyoun.github.io/WordBook_React-tsx-/"
+                      ><i class="fa-solid fa-link"></i
+                    ></a>
                   </div>
                 </div>
               </div>
