스킬 (nextjs), 프로젝트 (웹툰사이트) 추가

--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@
                 </div>
                 <div class="progressBox">
                   <div class="progress_name">
+                    <span>NEXT JS</span>
+                    <span>15%</span>
+                  </div>
+                  <div class="progress">
+                    <div class="progress_bar" style="width: 15%"></div>
+                  </div>
+                </div>
+                <div class="progressBox">
+                  <div class="progress_name">
                     <span>GIT</span>
                     <span>35%</span>
                   </div>
@@ -170,8 +179,26 @@
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-javascript">JavaScript</li>
             <li data-filter=".filter-react">React</li>
+            <li data-filter=".filter-next">Next Js</li>
           </ul>
           <div class="portfolio_wrap-container">
+            <div class="portfolio_item filter-next">
+              <div class="portfolio_wrap">
+                <img src="./imgs/웹툰사이트.gif" alt="" class="img-fluid" />
+                <div class="portfolio_info">
+                  <h4>웹툰사이트</h4>
+                  <p>23.09.07 ~ 23.09.15 (1인 프로젝트)</p>
+                  <div class="portfolio_links">
+                    <a href="https://github.com/LEEJINYOUN/Webtoon_Next-tsx-"
+                      ><i class="fa-brands fa-github"></i
+                    ></a>
+                    <a href="https://webtoon-next-tsx.vercel.app/"
+                      ><i class="fa-solid fa-link"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="portfolio_item filter-react">
               <div class="portfolio_wrap">
                 <img src="./imgs/화이트노이즈.gif" alt="" class="img-fluid" />
