--- a/index.html
+++ b/index.html
@@ -151,6 +151,15 @@
                 </div>
                 <div class="progressBox">
                   <div class="progress_name">
+                    <span>MYSQL</span>
+                    <span>10%</span>
+                  </div>
+                  <div class="progress">
+                    <div class="progress_bar" style="width: 10%"></div>
+                  </div>
+                </div>
+                <div class="progressBox">
+                  <div class="progress_name">
                     <span>GIT</span>
                     <span>35%</span>
                   </div>
